test/integration/bad/get_lp_bad_scope1.stan
transformed data {
  real y;
  y = target();
}
parameters {
  real z;
}
model {
  z ~ normal(0,1);
}
